# esp32_example_cal_partition

./: CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/bo_phycp/: CMakeLists.txt  Kconfig  bo_phycp.c
main/: main.c
